--- a/rdmo_chatbot/chatbot/.chainlit/config.toml
+++ b/rdmo_chatbot/chatbot/.chainlit/config.toml
@@ -47,7 +47,7 @@ reaction_on_message_received = false
 
 # Authorize users to spontaneously upload files with messages
 [features.spontaneous_file_upload]
-    enabled = true
+    enabled = false
     # Define accepted file types using MIME types
     # Examples:
     # 1. For specific file types:
@@ -112,7 +112,7 @@ cot = "full"
 custom_js = "/public/custom.js"
 
 # The style of alert boxes. Can be "classic" or "modern".
-alert_style = "modern"
+alert_style = "classic"
 
 # Specify additional attributes for custom JS file
 # custom_js_attributes = "async type = \"module\""
